# Snake

./: meson.build
src/: main.cpp
src/food/: food.cpp  food.hpp
src/gameobject/: gameobject.cpp  gameobject.hpp
src/gameobject/dynamicobject/: dynamicobject.cpp  dynamicobject.hpp
src/gameobject/dynamicobject/player/: player.cpp  player.hpp
src/gameobject/staticobject/: staticobject.cpp  staticobject.hpp
src/gameobject/staticobject/platform/: platform.cpp  platform.hpp
src/gengine/: engine.cpp  engine.hpp
src/platform/: platform.cpp  platform.hpp
src/player/: player.cpp  player.hpp
src/snakeh/: snake.cpp  snake.hpp
